--- a/clase4/index.html
+++ b/clase4/index.html
@@ -23,8 +23,8 @@
                         <li>Grupos de trabajo (cartelera)</li>
                     </ul>
                 <li>breve intro git</li>
-                <li><a href="#">contenido media y externo(iframe)</a></li>
-                <li><a href="#"></a>tablas y formularios</li>
+                <li><a href="sitio/media.html">contenido media y externo(iframe)</a></li>
+                <li><a href="#">tablas y formularios</a></li>
                 <li>ideas para el proyecto front</li>
             </ol>
         </section>
