--- a/clase6/index.html
+++ b/clase6/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../clase6/css/estilos_index.css">
     <title>Unidad 1 de CSS</title>
 </head>
 <body>
