implementos medidas relativas

--- a/clase7/sitio/estilos_4.html
+++ b/clase7/sitio/estilos_4.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="..//css/estilos_4.css">
     <title>Ejemplos N° 4 de estilos</title>
 </head>
 <body>
@@ -12,9 +11,9 @@
         <p>Se adaptan al tamaño de fuente o navegador.</p>
     </header>
     <main>
-        <div class="contenedor segunEm"><p>Contenedor de 10 em</p></div> <!-- relativa a la fuente -->
-        <div class="contenedor segunRem"><p>Contenedor de 10 rem</p></div> <!-- relativa a la fuente -->
-        <div class="contenedor segunPorcentaje"><p>Contenedor de 10 %</p></div> <!-- tamaño de la ventana -->
+        <div><p>Contenedor de 10 em</p></div>
+        <div><p>Contenedor de 10 rem</p></div>
+        <div><p>Contenedor de 10 %</p></div>
     </main>
     <footer>
         <p><a href="../index.html">Volver al inicio</a></p>
