--- a/clase7/sitio/estilos_3.html
+++ b/clase7/sitio/estilos_3.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="..//css/estilos_3.css">
-    <link rel="stylesheet" href="..//css/estilos_4.css">
     <title>Ejemplos N° 3 de estilos</title>
 </head>
 <body>
@@ -13,9 +11,9 @@
         <p>Dado que indistinto el dispositivo no se modican, no son adaptables.</p>
     </header>
     <main>
-        <div class="contenedor pixeles"><p>Contenedor de 200 pixeles</p></div>
-        <div class="contenedor pulgadas"><p>Contenedor de 2 pulgadas</p></div>
-        <div class="contenedor centimetros"><p>Contenedor de 10 centímetros</p></div>
+        <div><p>Contenedor de 200 pixeles</p></div>
+        <div><p>Contenedor de 2 pulgadas</p></div>
+        <div><p>Contenedor de 10 centímetros</p></div>
     </main>
     <footer>
         <p><a href="../index.html">Volver al inicio</a></p>
