--- a/clase6/index.html
+++ b/clase6/index.html
@@ -28,20 +28,20 @@
             <ol>
                 <li>Tipos de implementación</li>
                     <ul>
-                        <li><a href="#">Ejemplo N° 1</a></li>
+                        <li><a href="..//clase6/sitio/estilos_1.html">Ejemplo N° 1</a></li>
                     </ul>
                 <li>Selectores</li>
                     <ul>
-                        <li><a href="#">Ejemplo N° 2</a></li>
+                        <li><a href="..//clase6/sitio/estilos_2.html">Ejemplo N° 2</a></li>
                     </ul>
                 <li>Tipos de medidas</li>
                     <ul>
-                        <li><a href="#">Ejemplo N° 3: Medidas absolutas</a></li>
-                        <li><a href="#">Ejemplo N° 4:Medidas relativas</a></li>
+                        <li><a href="..//clase6/sitio/estilos_3.html">Ejemplo N° 3: Medidas absolutas</a></li>
+                        <li><a href="..//clase6/sitio/estilos_4.html">Ejemplo N° 4:Medidas relativas</a></li>
                     </ul>
                 <li>Colores, tipografías e íconos</li>
                     <ul>
-                        <li><a href="#">Ejemplo N° 5</a></li>
+                        <li><a href="..//clase6/sitio/estilos_5.html">Ejemplo N° 5</a></li>
                     </ul>
             </ol>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam fugit ipsa eligendi eveniet earum, est labore provident animi iure magni suscipit vel? Omnis sit laborum non odit recusandae nulla ad!
