--- a/Clase9/index.html
+++ b/Clase9/index.html
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>Material para acompañar las clases en vivo - CAC Python FS</p>
+        <p>Material para acompañar las clases en vivo - CAC Python FS hola</p>
     </footer>
 </body>
 </html>
