--- a/Clase12/intro-js.html
+++ b/Clase12/intro-js.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./js/intro.js"></script>
     <title>Introducción a JS</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Introducción a JS</h1>
+      <h1>Introducción a JS</h1>
     </header>
-    <main>
-        
-    </main>
+    <main></main>
     <!-- Considera los elemetos de HTML -->
     <script src="./js/intro.js"></script>
     <script>
-        console.log("Hola mundo, desde mi HTML");
-        window.console.log("Hola mundo, desde mi HTML de nuevo");
+      console.log("Hola mundo, desde mi HTML");
+      window.console.log("Hola mundo, desde mi HTML de nuevo");
     </script>
-</body>
+  </body>
 </html>
