--- a/Clase14/index.html
+++ b/Clase14/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css">
+    <script src="./js/controlDeFlujo.js"></script>
     <title>Clase 15 - JavaScript</title>
 </head>
 <body>
@@ -14,11 +15,19 @@
         <section>
             <h2>Temas a abordar</h2>
             <p>Observar ejecución en consola del navegador y cuadros de diálogo</p>
-            <ul>
+            <ul id="listaConDatos">
                 <li>Operadores: aritméticos, de comparación y lógicos</li>
                 <li>Expresiones y resolución (precedencia)</li>
                 <li>Control de flujo de un programa</li>
             </ul>
+        </section>
+        <section>
+            <h2>lista vacia</h2>
+            <ul id="lista"></ul>
+        </section>
+        <section>
+            <h2>otra lista</h2>
+            <ul id="otraLista"></ul>
         </section>
         <section>
             <h2>Palabras reservadas en JS</h2>
@@ -29,7 +38,7 @@
             <img src="./img/TabladelaVerdad.jpg" alt="Tabla de la verdad - Operaciones lógicas">
         </section>
     </main>
-    <script src="./js/main.js"></script>
+   <!--  <script src="./js/main.js"></script> -->
     <!-- <script src="./js/controlDeFlujo.js"></script> -->
 </body>
 </html>
