--- a/Clase12/intro-js.html
+++ b/Clase12/intro-js.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./js/intro.js"></script>
+    <!-- <script src="./js/intro.js"></script> -->
+    <script src="./js/condicionales.js"></script>
     <title>Introducción a JS</title>
   </head>
   <body>
@@ -12,10 +13,10 @@
     </header>
     <main></main>
     <!-- Considera los elemetos de HTML -->
-    <script src="./js/intro.js"></script>
+    <!-- <script src="./js/intro.js"></script>
     <script>
       console.log("Hola mundo, desde mi HTML");
       window.console.log("Hola mundo, desde mi HTML de nuevo");
-    </script>
+    </script> -->
   </body>
 </html>
