--- a/Clase14/index.html
+++ b/Clase14/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css">
-    <script src="./js/controlDeFlujo.js"></script>
+    <!-- <script src="./js/controlDeFlujo.js"></script> -->
     <title>Clase 15 - JavaScript</title>
 </head>
 <body>
@@ -40,5 +40,6 @@
     </main>
    <!--  <script src="./js/main.js"></script> -->
     <!-- <script src="./js/controlDeFlujo.js"></script> -->
+    <script src="./js/controlDeFlujo.js"></script>
 </body>
 </html>
