--- a/clase16/index.html
+++ b/clase16/index.html
@@ -51,5 +51,7 @@
     <script src="./js/bucleFor.js"></script> -->
     <script src="./js/arrays.js"></script>
     <script src="./js/objects.js"></script>
+    <script src="./js/funciones.js"></script>
+    <script src="./js/ejecucion.js"></script>
 </body>
 </html>
